<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:layout_margin="8dp"
    android:backgroundTint="@color/blue"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/season_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season_number"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/season_episode_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season_episode_order"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/seson_premieredate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season_premiere_date"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/season_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season_end_date"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/season_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside" />


    </LinearLayout>
</androidx.cardview.widget.CardView>