<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="@color/yellow"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="320dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimaryDark"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/person_cast"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesrson_cast"/>

                <TextView
                    android:id="@+id/person_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/person_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/person_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/cast_person_uri" />

                <ImageView
                    android:id="@+id/person_image"
                    android:layout_width="150dp"
                    android:layout_height="170dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="320dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimaryDark"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/character_cast"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/char_cast"/>

                <TextView
                    android:id="@+id/char_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/char_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/cast_cha_uri" />

                <ImageView
                    android:id="@+id/char_image"
                    android:layout_width="150dp"
                    android:layout_height="170dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.cardview.widget.CardView>